@startuml
class BaseDTO {
    +Id?: Guid
    +Type?: Guid
    +{static} TypeId: Guid
}
class AdressDTO extends BaseDTO {
    +Name1?: string
    +Name2?: string
    +Adress1?: string
    +Adress2?: string
    +Housenumber?: string
    +City?: string
    +Postcode?: string
    +{static} TypeId: Guid
}
class PropertyDTO {
    +Name?: string
    +Value?: string
    +{static} TypeId: Guid
}
class CommandDTO extends BaseDTO {
    +Response?: boolean
    +Arguments?: PropertyDTO[]
    +{static} TypeId: Guid
}
class CommandWrapper {
    -_dto: any
    -_service: any
    +Service: any
    +DTO: any
    +Response: boolean
    +Arguments: any[]
    +Type: Guid
    +Id: Guid
    +getArgument(name: string): any
    +setArgument(name: string, value: string): void
    -{static} _factories: any
    +{static} register(typeId: Guid, factory: CommandWrapperFactory): void
}
class FindAdressesBase extends CommandWrapper {
    +SearchText: string
    +SearchText: string
    +Result: AdressDTO[]
    +execute(searchText: string): Promise<AdressDTO[]>
    +{static} TypeId: Guid
    +{static} IsForMe(dto: CommandDTO): boolean
}
class GetAdressBase extends CommandWrapper {
    +Id: Guid
    +Id: Guid
    +Result: AdressDTO
    +execute(id: Guid): Promise<AdressDTO>
    +{static} TypeId: Guid
    +{static} IsForMe(dto: CommandDTO): boolean
}
class ObjectDTO extends BaseDTO {
    +Properties?: PropertyDTO[]
    +{static} TypeId: Guid
}
class SampleCommandBase extends CommandWrapper {
    +FirstOne: string
    +FirstOne: string
    +SecondOne: boolean
    +SecondOne: boolean
    +execute(firstOne: string, secondOne: boolean): Promise<void>
    +{static} TypeId: Guid
    +{static} IsForMe(dto: CommandDTO): boolean
}
class SetAdressBase extends CommandWrapper {
    +Id: Guid
    +Id: Guid
    +Adress: AdressDTO
    +Adress: AdressDTO
    +Result: AdressDTO
    +execute(id: Guid, adress: AdressDTO): Promise<AdressDTO>
    +{static} TypeId: Guid
    +{static} IsForMe(dto: CommandDTO): boolean
}
class TypeDTO extends BaseDTO {
    +{static} TypeId: Guid
}
CommandDTO --> "*" PropertyDTO
FindAdressesBase --> "*" AdressDTO
FindAdressesBase --> "1" CommandDTO
GetAdressBase --> "1" AdressDTO
GetAdressBase --> "1" CommandDTO
ObjectDTO --> "*" PropertyDTO
SampleCommandBase --> "1" CommandDTO
SetAdressBase --> "1" AdressDTO
SetAdressBase --> "1" CommandDTO
@enduml